<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuStarbucksActivity">

    <TextView
        android:id="@+id/textViewGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/greetings"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAddComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreetings">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/radioBtnTea"
            android:textColor="@color/purple_500" />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/radioBtnCoffee"
            android:textColor="@color/purple_500" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAddComponents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/textViewAddComponents"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkboxMilk"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/sugar"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkboxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAddComponents"
        app:layout_constraintTop_toTopOf="@id/checkboxMilk" />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/milk"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddComponents" />

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/lemon"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/checkboxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintTop_toBottomOf="@id/textViewAddComponents"
        app:layout_constraintTop_toTopOf="@id/checkboxMilk" />

    <TextView
        android:id="@+id/textViewDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/choose_drink_type"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTea"
        app:layout_constraintTop_toBottomOf="@+id/checkboxMilk" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/type_tea"
        android:padding="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType" />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/type_coffee"
        android:padding="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType" />

    <Button
        android:id="@+id/btnMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="сделать заказ"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea" />


</androidx.constraintlayout.widget.ConstraintLayout>